Made label invisible when a choice enjoys 100% support (issue #500).

--- a/client/src/views/story-contents.scss
+++ b/client/src/views/story-contents.scss
@@ -147,6 +147,13 @@
                         }
                     }
                 }
+
+                &.unanimous {
+                    .count {
+                        // use darker color when bar extends all the way to the end
+                        color: #333333;
+                    }
+                }
             }
         }
 
